--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.5",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0",
     "typescript": "^3.7.5"
   }
 }
